# obs-time-shift

./: CMakeLists.txt  README.md  installer.iss.in  time-glitch.c  time-shift.c  time-shift.h
.github/workflows/: build.yml
CI/macos/: time-shift.pkgproj
data/locale/: en-US.ini
